volume changes and offline video player implemented

--- a/app/src/main/res/layout/alt_player.xml
+++ b/app/src/main/res/layout/alt_player.xml
@@ -234,6 +234,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:visibility="gone"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
