--- a/app/src/main/res/layout/alt_player.xml
+++ b/app/src/main/res/layout/alt_player.xml
@@ -127,6 +127,7 @@
 
 
             <LinearLayout
+                android:id="@+id/exoRewLinearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -171,6 +172,7 @@
 
 
             <LinearLayout
+                android:id="@+id/exoFfwdLinearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
