--- a/app/src/main/res/layout/alt_player.xml
+++ b/app/src/main/res/layout/alt_player.xml
@@ -136,8 +136,8 @@
 
                 <ImageView
                     android:id="@id/exo_rew"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="5dp"
                     android:background="@android:color/transparent"
@@ -149,7 +149,7 @@
                     android:layout_gravity="center_vertical"
                     android:text="10s"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -185,12 +185,12 @@
                     android:layout_gravity="center_vertical"
                     android:text="10s"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="12sp" />
 
                 <ImageView
                     android:id="@id/exo_ffwd"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
@@ -386,7 +386,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center_vertical"
                 android:background="@android:color/transparent"
-                android:padding="5dp"
+                android:padding="1dp"
                 android:src="@drawable/ic_balaji_fullscreen" />
 
 
@@ -443,10 +443,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:gravity="bottom"
+        android:layout_marginRight="15dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/videoMenuLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@id/exo_position"
