--- a/app/src/main/res/layout/alt_balaji_tv_video_player.xml
+++ b/app/src/main/res/layout/alt_balaji_tv_video_player.xml
@@ -194,6 +194,7 @@
         android:paddingLeft="30dp"
         android:paddingBottom="7dp"
         android:paddingTop="5dp"
+        android:focusable="true"
         android:visibility="visible"
         android:alpha="0.7"
         android:background="@drawable/skip_button_bg"
