--- a/app/src/main/res/layout/balaji_video_player_layout.xml
+++ b/app/src/main/res/layout/balaji_video_player_layout.xml
@@ -193,6 +193,7 @@
         android:layout_marginBottom="10dp"
         android:paddingRight="30dp"
         android:paddingLeft="30dp"
+        android:focusable="true"
         android:paddingBottom="7dp"
         android:paddingTop="5dp"
         android:visibility="gone"
