--- a/app/src/main/res/layout/alt_player.xml
+++ b/app/src/main/res/layout/alt_player.xml
@@ -433,6 +433,30 @@
 
 
 
+
+    <TextView
+        android:id="@+id/skipVideoButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Title"
+        android:layout_gravity="bottom|end"
+        android:textColor="@color/white"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:paddingRight="30dp"
+        android:paddingLeft="30dp"
+        android:drawablePadding="5dp"
+        android:drawableLeft="@drawable/ic_baseline_fast_forward_24"
+        android:focusable="true"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:visibility="gone"
+        android:alpha="0.7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/durationLinearLayout"
+        android:background="@drawable/skip_button_bg"
+        android:textSize="15sp"/>
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/durationLinearLayout"
         android:layout_width="wrap_content"
