--- a/app/src/main/res/layout/balaji_video_player_layout.xml
+++ b/app/src/main/res/layout/balaji_video_player_layout.xml
@@ -141,6 +141,26 @@
 
 
     <LinearLayout
+        android:id="@+id/repeatVideoLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/black"
+        android:clickable="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/replay" />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
         android:id="@+id/gesture_controls_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -186,19 +206,19 @@
         android:id="@+id/skipVideoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Title"
         android:layout_gravity="bottom|end"
-        android:textColor="@color/white"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:paddingRight="30dp"
-        android:paddingLeft="30dp"
-        android:focusable="true"
-        android:paddingBottom="7dp"
-        android:paddingTop="5dp"
-        android:visibility="gone"
         android:alpha="0.7"
         android:background="@drawable/skip_button_bg"
-        android:textSize="15sp"/>
+        android:focusable="true"
+        android:paddingLeft="30dp"
+        android:paddingTop="5dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="7dp"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:visibility="gone"
+        tools:text="Title" />
 
 </FrameLayout>
