--- a/app/src/main/res/layout/banner_video_player.xml
+++ b/app/src/main/res/layout/banner_video_player.xml
@@ -59,7 +59,7 @@
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_balaji_pause"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <ImageView
                     android:id="@+id/exo_pause"
@@ -76,6 +76,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"
+                    android:paddingTop="5dp"
+                    android:padding="5dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
