--- a/app/src/main/res/layout/balaji_video_player_layout.xml
+++ b/app/src/main/res/layout/balaji_video_player_layout.xml
@@ -144,7 +144,7 @@
         android:id="@+id/repeatVideoLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
+        android:background="@drawable/video_player_placeholder"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
