--- a/app/src/main/res/layout/banner_video_player.xml
+++ b/app/src/main/res/layout/banner_video_player.xml
@@ -10,6 +10,7 @@
         android:id="@+id/videoPlayer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:controller_layout_id="@layout/alt_banner_player_controller"
         app:resize_mode="fill"
         app:use_controller="false" />
 
