--- a/app/src/main/res/layout/full_screen_video_player.xml
+++ b/app/src/main/res/layout/full_screen_video_player.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:animation_enabled="false"
-        app:controller_layout_id="@layout/alt_player"
+        app:controller_layout_id="@layout/full_screen_video_player_controller"
         app:resize_mode="fill" />
 
 
@@ -144,6 +144,7 @@
         android:id="@+id/repeatVideoLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/video_player_placeholder"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
