--- a/app/src/main/res/layout/full_screen_video_player_controller.xml
+++ b/app/src/main/res/layout/full_screen_video_player_controller.xml
@@ -12,7 +12,8 @@
         android:id="@+id/overlayImageTransparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha=".6"
+        android:alpha=".3"
+        android:visibility="gone"
         android:background="#CC212121" />
 
     <RelativeLayout
@@ -32,7 +33,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
             android:padding="5dp"
@@ -73,6 +73,9 @@
             android:visibility="gone" />
 
 
+
+
+
     </RelativeLayout>
 
 
@@ -86,6 +89,27 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/exo_lock"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="20dp"
+            android:background="@android:color/transparent"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:src="@drawable/lock"
+            android:visibility="gone" />
+
+
+        <ImageButton
+            android:id="@id/exo_unlock"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="20dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/unlock"
+            android:visibility="gone" />
+
 
         <LinearLayout
             android:id="@+id/centerButtonLayout"
@@ -97,15 +121,23 @@
             android:orientation="horizontal">
 
 
+            <ImageView
+                android:id="@id/exo_prev"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/pervious"
+                android:visibility="gone" />
+
+
             <LinearLayout
                 android:id="@+id/exoRewLinearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="50dp"
-                android:background="?attr/selectableItemBackground"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -133,10 +165,6 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:background="?attr/selectableItemBackground"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_pause" />
 
@@ -145,10 +173,6 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:background="?attr/selectableItemBackground"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_play" />
 
@@ -159,9 +183,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="50dp"
-                android:background="?attr/selectableItemBackground"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
                 android:orientation="horizontal">
 
                 <TextView
@@ -213,6 +234,86 @@
 
 
         <LinearLayout
+            android:id="@+id/volumeLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+
+            <ImageView
+                android:id="@+id/epsodeButton"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:background="@android:color/transparent"
+                android:padding="5dp"
+                android:src="@drawable/webseries"
+                android:visibility="gone" />
+
+
+            <ImageView
+                android:id="@+id/epsodeNextButton"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:background="@android:color/transparent"
+                android:padding="5dp"
+                android:src="@drawable/next_epsode"
+                android:visibility="gone" />
+
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/volumeFullScreenButton"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_balaji_volume_on" />
+
+
+                <ImageView
+                    android:id="@+id/volumeFullScreenUnMuteButton"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="5dp"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_balaji_volume_off"
+                    android:visibility="gone" />
+            </FrameLayout>
+
+
+            <SeekBar
+                android:id="@+id/exo_volume_progress"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="40dp"
+                android:maxHeight="5dp"
+                android:progressDrawable="@drawable/seekbar_progress_style"
+                android:thumb="@drawable/seekbar_thumb"
+                android:thumbOffset="0dp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -220,6 +321,16 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/speed_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/speed"
+                android:visibility="gone" />
 
 
             <LinearLayout
@@ -232,13 +343,11 @@
 
                 <ImageView
                     android:id="@+id/volumeUnMuteButton"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:layout_marginRight="15dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
+                    android:layout_marginRight="10dp"
+                    android:background="@android:color/transparent"
                     android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_on" />
 
@@ -246,28 +355,14 @@
                 <ImageView
                     android:id="@+id/volumeMuteAndUnMuteButton"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_height="26dp"
                     android:layout_gravity="center"
-                    android:layout_marginRight="15dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
+                    android:layout_marginRight="10dp"
+                    android:background="@android:color/transparent"
                     android:src="@drawable/ic_balaji_volume_off"
                     android:visibility="gone" />
 
             </LinearLayout>
-
-            <ImageView
-                android:id="@+id/epsodeButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="15dp"
-                android:background="?attr/selectableItemBackground"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:padding="5dp"
-                android:src="@drawable/webseries" />
 
 
             <ImageView
@@ -276,10 +371,26 @@
                 android:layout_height="26dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"
-                android:background="?attr/selectableItemBackground"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
+                android:background="@android:color/transparent"
                 android:src="@drawable/ic_balaji_setting" />
+
+            <ImageView
+                android:id="@+id/picture_in_picture"
+                android:layout_width="30dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_balaji_pip" />
+
+            <ImageView
+                android:id="@+id/enter_full_screen"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_balaji_fullscreen" />
+
 
         </LinearLayout>
 
@@ -296,15 +407,12 @@
         app:layout_constraintBottom_toTopOf="@id/videoMenuLayout"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
+    <com.google.android.exoplayer2.ui.DefaultTimeBar
         android:id="@+id/exo_progress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="?attr/selectableItemBackground"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toBottomOf="@id/vvvvvvvvvv"
         app:layout_constraintEnd_toStartOf="@id/durationLinearLayout"
         app:layout_constraintStart_toEndOf="@+id/vvvvvvvvvv"
@@ -341,7 +449,6 @@
         android:drawableLeft="@drawable/ic_baseline_fast_forward_24"
         android:drawablePadding="5dp"
         android:focusable="true"
-        android:focusableInTouchMode="true"
         android:paddingLeft="30dp"
         android:paddingTop="5dp"
         android:paddingRight="30dp"
@@ -423,6 +530,7 @@
         android:maxHeight="90dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/exo_progress"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
