--- a/app/src/main/res/layout/android_alt_tv_controller.xml
+++ b/app/src/main/res/layout/android_alt_tv_controller.xml
@@ -8,13 +8,6 @@
     android:layout_gravity="bottom"
     android:layoutDirection="ltr">
 
-    <View
-        android:id="@+id/overlayImageTransparent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha=".6"
-        android:background="#CC212121" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -138,6 +131,13 @@
                 android:focusableInTouchMode="true"
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_pause" />
+
+            <View
+                android:id="@+id/overlayImageTransparent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha=".6"
+                android:background="#CC212121" />
 
             <ImageView
                 android:id="@id/exo_pause"
@@ -270,7 +270,7 @@
 
 
             <ImageView
-                android:id="@+id/settings_btn"
+                android:id="@+id/settingButton"
                 android:layout_width="30dp"
                 android:layout_height="26dp"
                 android:layout_gravity="center"
