--- a/app/src/main/res/layout/android_tv_alt_video_player.xml
+++ b/app/src/main/res/layout/android_tv_alt_video_player.xml
@@ -22,9 +22,7 @@
         android:id="@+id/contentRateLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
         android:visibility="gone">
